Optimize file split

--- a/FileSort/App.config
+++ b/FileSort/App.config
@@ -4,9 +4,16 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <appSettings>
-    <add key="File" value="inputMedium.txt"/>
+    <!-- Input file to sort -->
+    <add key="File" value="input.txt"/>
+    
+    <!-- Number of lines in memory during file split -->
     <add key="SplitterLinesLimit" value="100000"/>
+    
+    <!-- Lines reading limit in memory during sort -->
     <add key="LinesReadLimit" value="300000"/>
+    
+    <!-- Number of sets with lines in memory (one set with LinesReadLimit lines) -->
     <add key="LinesListsLimit" value="3"/>
   </appSettings>
 </configuration>
